--- a/src/about.html
+++ b/src/about.html
@@ -29,47 +29,48 @@
 </head>
 
 <body id="body">
-<div class="cursor cursor-red"></div>
-<div class="aura"></div>
-<header id="included__header" class="header"></header>
-<main class="main">
-    <!--========== Page Content ==========-->
-    <section class="section--about">
-        <div class="about">
-            <h2 class="title">about</h2>
-            <div class="about__info">
-                <p class="about__info-text">I’m Pavlo, Junior Front-End Developer based in Limerick, Ireland.</p>
-                <p class="about__info-text">I consider coding a form of creation and I love to work with crazy designers that push me to think
-                    outside the box, so we can bring to life tons of amazing projects.</p>
-                <p class="about__info-text">Besides my passion for coding (as you can see) you could easily find me on a Saturday night singing
-                    in a karaoke (not the best performer but the one who puts the best show on stage for sure).
-                </p>
-                <ul class="socials socials-about">
-                    <li class="socials__item">
-                        <a href="https://github.com/pavloshaposhnikov" class="socials__link">GitHub</a>
-                    </li>
-                    <li class="socials__item">
-                        <a href="https://www.linkedin.com/in/pavloshaposhnikov/" class="socials__link">Linkedin</a>
-                    </li>
-                    <li class="socials__item">
-                        <a href="https://www.instagram.com/hellherrr/" class="socials__link">Instagram</a>
-                    </li>
-                </ul>
-                <p class="about__info-author">Designed by <a href="#">Cris García.</a></p>
-            </div>
-            <div class="about__contact">
-                <p>I’m open for creative opportunities or for a fun karaoke night.
-                </p>
-                <p>Don’t be shy, <a href="#">say hi!</a></p>
-            </div>
-            <div class="about__background-img">
-                <img src="../src/assets/images/about/profile.png" alt="Preview">
-            </div>
-        </div>
-    </section>
-    <!--========== \Page Content ==========-->
-</main>
-
+<div class="inner">
+        <div class="cursor cursor-red"></div>
+        <div class="aura"></div>
+        <header id="included__header" class="header"></header>
+        <main class="main">
+            <!--========== Page Content ==========-->
+            <section class="section--about">
+                <div class="about">
+                    <h2 class="title">about</h2>
+                    <div class="about__info">
+                        <p class="about__info-text">I’m Pavlo, Junior Front-End Developer based in Limerick, Ireland.</p>
+                        <p class="about__info-text">I consider coding a form of creation and I love to work with crazy designers that push me to think
+                            outside the box, so we can bring to life tons of amazing projects.</p>
+                        <p class="about__info-text">Besides my passion for coding (as you can see) you could easily find me on a Saturday night singing
+                            in a karaoke (not the best performer but the one who puts the best show on stage for sure).
+                        </p>
+                        <ul class="socials socials-about">
+                            <li class="socials__item">
+                                <a href="https://github.com/pavloshaposhnikov" class="socials__link">GitHub</a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="https://www.linkedin.com/in/pavloshaposhnikov/" class="socials__link">Linkedin</a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="https://www.instagram.com/hellherrr/" class="socials__link">Instagram</a>
+                            </li>
+                        </ul>
+                        <p class="about__info-author">Designed by <a href="#">Cris García.</a></p>
+                    </div>
+                    <div class="about__contact">
+                        <p>I’m open for creative opportunities or for a fun karaoke night.
+                        </p>
+                        <p>Don’t be shy, <a href="#">say hi!</a></p>
+                    </div>
+                    <div class="about__background-img">
+                        <img src="../src/assets/images/about/profile.png" alt="Preview">
+                    </div>
+                </div>
+            </section>
+            <!--========== \Page Content ==========-->
+        </main>
+</div>
 <script>
     window.addEventListener('mousemove', function(e) {
         const cursorAura = document.querySelector('.aura');
