--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 					<li class="projects__item">
 						<a href="https://pavloshaposhnikov.github.io/Drill" target="_blank" class="projects__link">
 							<h2 class="projects__title">DrillHeadz NFT</h2>
-							<p class="projects__subtitle">2021 - HTML, SCSS, native JS</p>
+							<p class="projects__subtitle">2021 - HTML, SCSS, JS</p>
 						</a>
 						<div class="projects__preview">
 							<img src="../src/assets/images/projects/project1.png" alt="Project preview">
@@ -59,7 +59,7 @@
 					<li class="projects__item">
 						<a href="https://pavloshaposhnikov.github.io/Mules/" target="_blank" class="projects__link">
 							<h2 class="projects__title">Wall Street Mules NFT</h2>
-							<p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
+							<p class="projects__subtitle">2022 - HTML, SCSS, JS</p>
 						</a>
 						<div class="projects__preview">
 							<img src="../src/assets/images/projects/project2.png" alt="Project preview">
@@ -68,7 +68,7 @@
 					<li class="projects__item">
 						<a href="https://pavloshaposhnikov.github.io/Bambu" target="_blank" class="projects__link">
 							<h2 class="projects__title">BambuVerse NFT</h2>
-							<p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
+							<p class="projects__subtitle">2022 - HTML, SCSS, JS</p>
 						</a>
 						<div class="projects__preview">
 							<img src="../src/assets/images/projects/project3.png" alt="Project preview">
@@ -77,7 +77,7 @@
 					<li class="projects__item">
 						<a href="https://whih.com.ua/" target="_blank" class="projects__link">
 							<h2 class="projects__title">WHIH Charity Fund</h2>
-							<p class="projects__subtitle">2022 - HTML, SCSS, native JS</p>
+							<p class="projects__subtitle">2022 - HTML, SCSS, JS</p>
 						</a>
 						<div class="projects__preview">
 							<img src="../src/assets/images/projects/project4.png" alt="Project preview">
@@ -86,7 +86,7 @@
 					<li class="projects__item">
 						<a href="https://pavloshaposhnikov.github.io/Lite-DeathMatch/" target="_blank" class="projects__link">
 							<h2 class="projects__title">GTA Project Lite DM</h2>
-							<p class="projects__subtitle">2021 - HTML, CSS, native JS</p>
+							<p class="projects__subtitle">2021 - HTML, CSS, JS</p>
 						</a>
 						<div class="projects__preview">
 							<img src="../src/assets/images/projects/project5.png" alt="Project preview">
