--- a/src/jungles.html
+++ b/src/jungles.html
@@ -30,112 +30,114 @@
 </head>
 
 <body id="body">
-<div class="cursor cursor-red"></div>
-<div class="aura"></div>
-    <!--========== Page Content ==========-->
-<section class="section--jungles">
-    <div class="noise">
-        <div></div>
-    </div>
-    <div class="jungles__title-wrap">
-        <div>
-            <span>jungles</span>
-            <span>jungles</span>
-            <span>jungles</span>
-            <span>jungles</span>
-            <span>jungles</span>
-            <span>jungles</span>
-            <span>jungles</span>
-            <span>jungles</span>
-            <span>jungles</span>
+<div class="inner">
+    <div class="cursor cursor-red"></div>
+    <div class="aura"></div>
+        <!--========== Page Content ==========-->
+    <section class="section--jungles">
+        <div class="noise">
+            <div></div>
         </div>
-    </div>
-    <div class="jungles">
-        <div class="jungles__desc">
-            <p>This is the space where I create, where I try new technologies to develop myself in skills that are
-                often difficult to learn working in corporate projects.</p>
-            <p>It's the space where I show who I am further than normal agency projects.
-            </p>
-            <p>It's my personal kaizen.</p>
-            <p>To see other projects, follow the link:</p>
-            <a href="index.html">Back to shaposhnikov folio</a>
+        <div class="jungles__title-wrap">
+            <div>
+                <span>jungles</span>
+                <span>jungles</span>
+                <span>jungles</span>
+                <span>jungles</span>
+                <span>jungles</span>
+                <span>jungles</span>
+                <span>jungles</span>
+                <span>jungles</span>
+                <span>jungles</span>
+            </div>
         </div>
-        <ul class="jungles__list">
-            <li class="jungles__item">
-                <img src="../src/assets/images/jungles/preview.png" alt="Preview">
-                <div class="jungles__item-info">
-                    <h3 class="jungles__item-title">Anime animeshnoe</h3>
-                    <p class="jungles__item-date">Uploaded: 21.07</p>
-                    <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
-                    <a href="#" class="jungles__item-link">Explore more</a>
-                </div>
-            </li>
-            <li class="jungles__item">
-                <img src="../src/assets/images/jungles/preview.png" alt="Preview">
-                <div class="jungles__item-info">
-                    <h3 class="jungles__item-title">Anime animeshnoe</h3>
-                    <p class="jungles__item-date">Uploaded: 21.07</p>
-                    <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
-                    <a href="#" class="jungles__item-link">Explore more</a>
-                </div>
-            </li>
-            <li class="jungles__item">
-                <img src="../src/assets/images/jungles/preview.png" alt="Preview">
-                <div class="jungles__item-info">
-                    <h3 class="jungles__item-title">Anime animeshnoe</h3>
-                    <p class="jungles__item-date">Uploaded: 21.07</p>
-                    <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
-                    <a href="#" class="jungles__item-link">Explore more</a>
-                </div>
-            </li>
-            <li class="jungles__item">
-                <img src="../src/assets/images/jungles/preview.png" alt="Preview">
-                <div class="jungles__item-info">
-                    <h3 class="jungles__item-title">Anime animeshnoe</h3>
-                    <p class="jungles__item-date">Uploaded: 21.07</p>
-                    <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
-                    <a href="#" class="jungles__item-link">Explore more</a>
-                </div>
-            </li>
-            <li class="jungles__item">
-                <img src="../src/assets/images/jungles/preview.png" alt="Preview">
-                <div class="jungles__item-info">
-                    <h3 class="jungles__item-title">Anime animeshnoe</h3>
-                    <p class="jungles__item-date">Uploaded: 21.07</p>
-                    <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
-                    <a href="#" class="jungles__item-link">Explore more</a>
-                </div>
-            </li>
-            <li class="jungles__item">
-                <img src="../src/assets/images/jungles/preview.png" alt="Preview">
-                <div class="jungles__item-info">
-                    <h3 class="jungles__item-title">Anime animeshnoe</h3>
-                    <p class="jungles__item-date">Uploaded: 21.07</p>
-                    <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
-                    <a href="#" class="jungles__item-link">Explore more</a>
-                </div>
-            </li>
-            <li class="jungles__item">
-                <img src="../src/assets/images/jungles/preview.png" alt="Preview">
-                <div class="jungles__item-info">
-                    <h3 class="jungles__item-title">Anime animeshnoe</h3>
-                    <p class="jungles__item-date">Uploaded: 21.07</p>
-                    <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
-                    <a href="#" class="jungles__item-link">Explore more</a>
-                </div>
-            </li>
-            <li class="jungles__item">
-                <img src="../src/assets/images/jungles/preview.png" alt="Preview">
-                <div class="jungles__item-info">
-                    <h3 class="jungles__item-title">Anime animeshnoe</h3>
-                    <p class="jungles__item-date">Uploaded: 21.07</p>
-                    <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
-                    <a href="#" class="jungles__item-link">Explore more</a>
-                </div>
-            </li>
-        </ul>
-    </div>
-</section>
+        <div class="jungles">
+            <div class="jungles__desc">
+                <p>This is the space where I create, where I try new technologies to develop myself in skills that are
+                    often difficult to learn working in corporate projects.</p>
+                <p>It's the space where I show who I am further than normal agency projects.
+                </p>
+                <p>It's my personal kaizen.</p>
+                <p>To see other projects, follow the link:</p>
+                <a href="index.html">Back to shaposhnikov folio</a>
+            </div>
+            <ul class="jungles__list">
+                <li class="jungles__item">
+                    <img src="../src/assets/images/jungles/preview.png" alt="Preview">
+                    <div class="jungles__item-info">
+                        <h3 class="jungles__item-title">Anime animeshnoe</h3>
+                        <p class="jungles__item-date">Uploaded: 21.07</p>
+                        <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
+                        <a href="#" class="jungles__item-link">Explore more</a>
+                    </div>
+                </li>
+                <li class="jungles__item">
+                    <img src="../src/assets/images/jungles/preview.png" alt="Preview">
+                    <div class="jungles__item-info">
+                        <h3 class="jungles__item-title">Anime animeshnoe</h3>
+                        <p class="jungles__item-date">Uploaded: 21.07</p>
+                        <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
+                        <a href="#" class="jungles__item-link">Explore more</a>
+                    </div>
+                </li>
+                <li class="jungles__item">
+                    <img src="../src/assets/images/jungles/preview.png" alt="Preview">
+                    <div class="jungles__item-info">
+                        <h3 class="jungles__item-title">Anime animeshnoe</h3>
+                        <p class="jungles__item-date">Uploaded: 21.07</p>
+                        <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
+                        <a href="#" class="jungles__item-link">Explore more</a>
+                    </div>
+                </li>
+                <li class="jungles__item">
+                    <img src="../src/assets/images/jungles/preview.png" alt="Preview">
+                    <div class="jungles__item-info">
+                        <h3 class="jungles__item-title">Anime animeshnoe</h3>
+                        <p class="jungles__item-date">Uploaded: 21.07</p>
+                        <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
+                        <a href="#" class="jungles__item-link">Explore more</a>
+                    </div>
+                </li>
+                <li class="jungles__item">
+                    <img src="../src/assets/images/jungles/preview.png" alt="Preview">
+                    <div class="jungles__item-info">
+                        <h3 class="jungles__item-title">Anime animeshnoe</h3>
+                        <p class="jungles__item-date">Uploaded: 21.07</p>
+                        <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
+                        <a href="#" class="jungles__item-link">Explore more</a>
+                    </div>
+                </li>
+                <li class="jungles__item">
+                    <img src="../src/assets/images/jungles/preview.png" alt="Preview">
+                    <div class="jungles__item-info">
+                        <h3 class="jungles__item-title">Anime animeshnoe</h3>
+                        <p class="jungles__item-date">Uploaded: 21.07</p>
+                        <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
+                        <a href="#" class="jungles__item-link">Explore more</a>
+                    </div>
+                </li>
+                <li class="jungles__item">
+                    <img src="../src/assets/images/jungles/preview.png" alt="Preview">
+                    <div class="jungles__item-info">
+                        <h3 class="jungles__item-title">Anime animeshnoe</h3>
+                        <p class="jungles__item-date">Uploaded: 21.07</p>
+                        <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
+                        <a href="#" class="jungles__item-link">Explore more</a>
+                    </div>
+                </li>
+                <li class="jungles__item">
+                    <img src="../src/assets/images/jungles/preview.png" alt="Preview">
+                    <div class="jungles__item-info">
+                        <h3 class="jungles__item-title">Anime animeshnoe</h3>
+                        <p class="jungles__item-date">Uploaded: 21.07</p>
+                        <p class="jungles__item-desc">Applying a CSS shadows trick for text extrusion animation</p>
+                        <a href="#" class="jungles__item-link">Explore more</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+</div>
     <!--========== \Page Content ==========-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
